# project-chitti

./: .gitignore  README.md  pyproject.toml
analysis/: analysis_pdf.ipynb  demo_app.py  extraction_quality_analysis.ipynb
app/: 02_rag_st_frontend.py
app/.streamlit/: config.toml
data/raw/ground truth/: basketball_pdf.txt  chess_pdf.txt  genai_pdf.txt  latex_pdf.txt  matploblib_21_41_pdf.txt  matploblib_61_81_pdf.txt  matplotlib_1-21_pdf.txt  matplotlib_41-61_pdf.txt  matplotlib_81_101_pdf.txt  notion_pdf.txt  sleep_pdf.txt
data/text extractions/: consolidated_extractions.csv  final_consolidated.csv  ground_truth_txt_extractions.csv
data/text extractions/pdfminer.six/: pdfminer_txt_extractions.csv
data/text extractions/pymupdf/: pymupdf_txt_extractions.csv
data/text extractions/pypdf/: pypdf_txt_extractions.csv
docs/: Project Chitti - PDF Extraction Report.pages  ~$f_python_librarires_comparison.docx
src/: extractions_consolidate.py  ground_truth_consolidate.py  ground_truth_text_extraction.py  pdfminer_text_extraction.py  pymupdf_text_extraction.py  pypdf_text_extraction.py
src/utils/: metrics.py  pdf_utils.py
