[project]
name = "project-chitti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pdfminer-six>=20250506",
    "pymupdf>=1.26.1",
    "pypdf>=5.6.0",
    "streamlit>=1.45.1",
]
